--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <div id="wistlersMother">
           <img src="assets/ArrangementinGreyandBlackNo1.webp" alt="Artwork 1" />
         </div>
+        <button id="like-button">Like</button>
+        <span id="like-count">0</span> likes
         <h2>Arrangement in Grey and Black No. 1</h2>
         <p>
           Whistler’s Mother, or Arrangement in Grey and Black No. 1, as it’s
@@ -36,6 +38,8 @@
       </div>
       <div class="artwork">
         <img src="assets/TheArnolfiniPortrait.webp" alt="Artwork 2" />
+        <button id="like-button">Like</button>
+        <span id="like-count">0</span> likes
         <h2>The Arnolfini Portrait</h2>
         <p>
           One of the most significant works produced during the Northern
